<resources>
    <string name="app_name">PSK</string>

    <!--  Home Page  -->
    <string name="home_page_vedette">En Vedette</string>
    <string name="home_page_produit">Nos Produits</string>
    <string name="home_page_title_article">Titre Article</string>
    <string name="home_page_consulte">Consulter</string>
    <string name="home_page_price">$120</string>

    <!--  Commande Page  -->
    <string name="commande_page_title">Mes Achats</string>
    <string name="commande_page_title_article">@string/home_page_title_article</string>
    <string name="commande_page_see_details">Voir Details</string>
    <string name="commande_page_price">@string/home_page_price</string>

    <!-- Details Commande Page  -->
    <string name="commande_detail_page_title">@string/commande_page_title</string>
    <string name="commande_detail_page_title_article">@string/commande_page_title_article</string>
    <string name="commande_detail_page_description">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.
    </string>
    <string name="commande_detail_page_price">@string/commande_page_price</string>

    <!--  Profile Page  -->
    <string name="profile_page_title">Profil</string>
    <string name="profile_page_name">Nom</string>
    <string name="profile_page_email">Email</string>
    <string name="profile_page_adresse">Adresse</string>
    <string name="profile_page_telephone">Telephone</string>
    <string name="profile_page_deconnexion">Déconnexion</string>
    <string name="home_menu">Accueil</string>
    <string name="commande_menu">Commandes</string>
    <string name="profil_menu">Profil</string>
    <string name="profile_page_telephone_client">Telephone du Client</string>
    <string name="profile_page_adresse_client">Adresse du client</string>
    <string name="profile_page_email_client">Email du Client</string>
    <string name="profile_page_name_client">Nom du Client</string>
    <string name="email">Email</string>
    <string name="profile_page_connexion">Connexion</string>
    <string name="password">password</string>
    <string name="login">Se Connecter</string>
    <string name="save_username_key">username_prefs</string>
    <string name="save_password_key">password_prefs_key</string>
    <string name="commande_page_date_ordered">date d\'achat</string>
    <string name="commande_page_status">Etat</string>
    <string name="detail_page_category">Category</string>
    <string name="detail_page_date_ordered">date d\'achat</string>
    <string name="detail_page_status">status</string>
    <string name="fermer">Fermer</string>
    <string name="tiret">-</string>

</resources>