<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_size"
    android:background="@color/blue">

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="125dp"-->
<!--        android:layout_height="125dp"-->
<!--        android:src="@drawable/user"-->
<!--        android:layout_marginTop="@dimen/item_margin"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="@dimen/default_margin"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:scaleType="centerCrop"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:lottie_rawRes="@raw/user_profile_man"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/medium_size"
        android:background="@color/darkYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/profile_page_name"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_name"
        android:textSize="@dimen/medium_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/greater"
        android:layout_marginTop="@dimen/greater"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/profile_name_input"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_name_client"
        android:textSize="@dimen/medium_size"
        app:layout_constraintBottom_toBottomOf="@+id/profile_page_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_page_name"
        app:layout_constraintTop_toTopOf="@+id/profile_page_name" />

    <TextView
        android:id="@+id/profile_page_email"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_email"
        android:textSize="@dimen/medium_size"
        android:layout_marginStart="@dimen/greater"
        android:layout_marginTop="@dimen/greater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_name" />

    <TextView
        android:id="@+id/profile_email_input"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_email_client"
        android:textSize="@dimen/medium_size"
        app:layout_constraintStart_toStartOf="@+id/profile_name_input"
        app:layout_constraintTop_toTopOf="@+id/profile_page_email" />

    <TextView
        android:id="@+id/profile_page_adresse"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_adresse"
        android:textSize="@dimen/medium_size"
        android:layout_marginTop="@dimen/greater"
        android:layout_marginStart="@dimen/greater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_email" />

    <TextView
        android:id="@+id/profile_adresse_input"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_adresse_client"
        android:textSize="@dimen/medium_size"
        app:layout_constraintStart_toStartOf="@+id/profile_email_input"
        app:layout_constraintTop_toTopOf="@+id/profile_page_adresse" />

    <TextView
        android:id="@+id/profile_page_telephone"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_telephone"
        android:textSize="@dimen/medium_size"
        android:layout_marginTop="@dimen/greater"
        android:layout_marginStart="@dimen/greater"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_adresse" />

    <TextView
        android:id="@+id/profile_telephone_input"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_telephone_client"
        android:textSize="@dimen/medium_size"
        app:layout_constraintStart_toStartOf="@+id/profile_adresse_input"
        app:layout_constraintTop_toTopOf="@+id/profile_page_telephone" />

    <Button
        android:id="@+id/deconnexion_btn"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:background="@drawable/corner_round"
        android:gravity="center"
        android:padding="@dimen/item_margin"
        android:text="@string/profile_page_deconnexion"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_size"
        android:textStyle="bold"
        android:elevation="@dimen/small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_telephone_input" />

</androidx.constraintlayout.widget.ConstraintLayout>