<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkYellow"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:layout_marginTop="@dimen/small_size"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_title_article"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/commande_detail_page_title_article"
                android:textColor="@color/dark"
                android:textSize="@dimen/default_margin"

                />

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/commande_detail_page_price"
                android:textColor="@color/darkRed"
                android:textSize="@dimen/greater"
                android:textStyle="bold"
                android:paddingEnd="@dimen/item_margin"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_category"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/detail_page_category"
                android:textColor="@color/dark"
                android:textSize="@dimen/default_margin"

                />

            <TextView
                android:id="@+id/detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/detail_page_status"
                android:textColor="@color/blue"
                android:textSize="@dimen/default_margin"
                android:textStyle="bold"
                android:paddingEnd="@dimen/item_margin"
                style="@style/SubtitleTextStyle"


                />


        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="3dp"-->
<!--            android:layout_weight="0.3"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginHorizontal="@dimen/default_margin"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/detail_date_ordered"-->
<!--                style="@style/SubtitleTextStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:ellipsize="end"-->
<!--                android:text="@string/detail_page_date_ordered"-->
<!--                android:textColor="@color/dark"-->
<!--                android:textSize="@dimen/default_margin"-->

<!--                />-->


<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:layout_marginHorizontal="@dimen/medium_size"
            android:paddingEnd="@dimen/small_size"
            android:textAlignment="gravity"
            android:ellipsize="end"
            android:maxLines="6"
            android:layout_marginTop="@dimen/small_size"
            android:text="@string/commande_detail_page_description"
            style="@style/DefaultTextStyle"
            />

<!--        <TextView-->
<!--            android:id="@+id/detail_note"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight=".75"-->
<!--            android:layout_marginHorizontal="@dimen/medium_size"-->
<!--            android:paddingEnd="@dimen/small_size"-->
<!--            android:textAlignment="gravity"-->
<!--            android:ellipsize="end"-->
<!--            android:maxLines="4"-->
<!--            android:text="@string/commande_detail_page_description"-->
<!--            style="@style/DefaultTextStyle"-->
<!--            />-->



        <TextView
            android:id="@+id/fermer_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight=".1"
            android:text="@string/fermer"
            android:gravity="center"
            android:textSize="@dimen/medium_size"
            android:textStyle="bold"
            style="@style/SubtitleTextStyle"
            android:background="@drawable/corner_round"
            android:layout_gravity="center"
            android:layout_margin="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            />

    </LinearLayout>

</LinearLayout>