<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_size">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="500dp"
        android:background="@color/darkYellow"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/commande_detail_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/commande_detail_title_article"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/commande_detail_page_title_article"
                android:textColor="@color/dark"
                android:textSize="@dimen/default_margin"

                />

            <TextView
                android:id="@+id/commande_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/commande_detail_page_price"
                android:textColor="@color/darkRed"
                android:textSize="@dimen/default_margin"
                android:textStyle="bold"

                />

        </LinearLayout>

        <TextView
            android:id="@+id/commande_detail_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:layout_marginHorizontal="@dimen/medium_size"
            android:paddingEnd="@dimen/small_size"
            android:textAlignment="gravity"
            android:ellipsize="end"
            android:maxLines="6"
            android:text="@string/commande_detail_page_description"
            style="@style/DefaultTextStyle"
            />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:background="@drawable/corner_round"
            android:layout_gravity="center"
            android:layout_margin="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            />

    </LinearLayout>

</LinearLayout>