<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginBottom="@dimen/small_size"
    style="@style/ColorYellowBackground"
    android:background="@drawable/corner_yellow"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_order_item"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/default_margin"
        app:cardElevation="@dimen/small_size"
        android:layout_margin="@dimen/small_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/order_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending1" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/order_item_title"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_separationH"
        android:layout_width="10dp"
        android:layout_height="2dp"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_order_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_item_title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/little_size"
        android:text="@string/home_page_title_article"
        android:paddingHorizontal="@dimen/little_size"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginStart="@dimen/item_margin"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="@+id/view_separationH"
        app:layout_constraintEnd_toStartOf="@+id/order_item_price"
        app:layout_constraintStart_toEndOf="@+id/cardView_order_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_item_price"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_price"
        android:textColor="@color/darkRed"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/item_margin"
        app:layout_constraintBottom_toBottomOf="@+id/view_separationH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separationH"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_item_consult"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingHorizontal="@dimen/item_margin"
        android:text="@string/home_page_consulte"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/item_margin"
        android:background="@drawable/corner_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_order_item"
        app:layout_constraintTop_toBottomOf="@+id/view_separationH" />

</androidx.constraintlayout.widget.ConstraintLayout>