<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:scaleX="3"
        android:scaleY="3"
        android:layout_marginTop="90dp"
        android:src="@drawable/original"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/animationView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/logo_image"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_rawRes="@raw/access_door" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="350dp"
        android:background="@color/darkGray"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_txt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/medium_size"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            style="@style/SubtitleTextStyle"
            android:layout_marginTop="@dimen/default_margin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_toggle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:helperTextTextColor="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_toggle_txt"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:text="@string/password"
            android:background="@color/darkGray"
            android:paddingStart="@dimen/medium_size"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            style="@style/SubtitleTextStyle"
            android:layout_marginTop="@dimen/default_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:background="@drawable/corner_yellow"
        android:elevation="@dimen/small_size"
        android:gravity="center"
        android:padding="@dimen/item_margin"
        android:text="@string/profile_page_connexion"
        android:textColor="@color/blue"
        android:textSize="@dimen/medium_size"
        android:layout_marginTop="75dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_toggle" />

</androidx.constraintlayout.widget.ConstraintLayout>